--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Starnote
 Version: 0.2.0
 Author: Tim van der Valk
-Maintainer: Tim van der Valk <t.vandervalk@uu.nl>
+Maintainer: Tim van der Valk <timvdvalk.work@gmail.com>
 Description: This package allows you to transform and save a stargazer table as tabularx and add a wrapping table note. 
 License: GPL-2
 Encoding: UTF-8
